--- a/GUI/Navigation/EditPage.xaml
+++ b/GUI/Navigation/EditPage.xaml
@@ -1,20 +1,20 @@
-﻿<Page x:Class="GUI.Delete"
+﻿<Page x:Class="GUI.Navigation.EditPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-	Title="Delete">
+	Title="EditPage">
 
     <Grid Background="#802A2A">
-
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
+            <!--This is the top of the page-->
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <TextBlock FontSize="25" Text="Remove Rebel" Grid.Row="0" TextAlignment="Center" VerticalAlignment="Center" Foreground="DarkGray" />
+        <TextBlock Text="Edit Rebel" FontSize="25" Grid.Row="0" TextAlignment="Center" VerticalAlignment="Center"/>
 
         <Grid Grid.Row="1">
 
@@ -22,16 +22,10 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <TextBox Margin="10,10" />
-            <Button Content="Annihilate" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" />
-            <TextBox Margin="10,10" Grid.Row="1" Grid.Column="0" />
-            <Button Content="Finish Off" Margin="10,10,10,10" Grid.Row="1" Grid.Column="1" />
 
+            <TextBox Grid.Row="0"  Margin="10,10" />
+            <TextBlock Text=" Enter Rebel ID" Margin="10,10" TextAlignment="Left" VerticalAlignment="Center" Foreground="LightGray"/>
+            <Button Grid.Row="1"  Margin="10,10" Content="Edit Rebel" Background="LightGray"/>
         </Grid>
-
     </Grid>
 </Page>
