--- a/GUI/Navigation/FindPage.xaml
+++ b/GUI/Navigation/FindPage.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="GUI.Find"
+﻿<Page x:Class="GUI.Navigation.FindPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-	Title="Find">
+	Title="FindPage">
 
     <Grid Background="#802A2A">
         <Grid.RowDefinitions>
@@ -47,7 +47,6 @@
 
             <TextBlock Margin=" 10,10,10,10" Grid.Row="1" Grid.Column="1" Background="GhostWhite"/>
             <TextBlock Margin=" 10,10,10,10" Grid.Row="1" Grid.Column="0" Background="GhostWhite"/>
-
         </Grid>
     </Grid>
 </Page>
