--- a/GUI/Navigation/Homepage.xaml
+++ b/GUI/Navigation/Homepage.xaml
@@ -1,13 +1,17 @@
-﻿<Page x:Class="GUI.HomePage"
+﻿<Page x:Class="GUI.Navigation.Homepage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:viewModel="clr-namespace:GUI.Navigation"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-	Title="HomePage">
+	Title="Homepage">
 
-
+    <Page.DataContext>
+        <viewModel:NavigationViewModel/>
+    </Page.DataContext>
+    
     <Grid Background="#802A2A">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -26,11 +30,10 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Button Content="Find" Margin="10,10,10,10" Grid.Row="0" Grid.Column="0" />
-            <Button Content="Add" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" />
-            <Button Content="Edit" Margin="10,10,10,10" Grid.Row="1" Grid.Column="0" />
-            <Button Content="Delete" Margin="10,10,10,10" Grid.Row="1" Grid.Column="1" />
-
+            <Button Command="{Binding FindButton}" Content="Find" Margin="10,10,10,10" Grid.Row="0" Grid.Column="0" />
+            <Button Command="{Binding AddButton}" Content="Add" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" />
+            <Button Command="{Binding EditButton}" Content="Edit" Margin="10,10,10,10" Grid.Row="1" Grid.Column="0" />
+            <Button Command="{Binding DeleteButton}" Content="Delete" Margin="10,10,10,10" Grid.Row="1" Grid.Column="1" />
         </Grid>
     </Grid>
 </Page>
