--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -8,6 +8,6 @@
         <viewModel:MainWindowViewModel/>
     </Window.DataContext>
 
-    <Frame Source="{Binding source}" NavigationUIVisibility="Hidden"/>
+    <Frame Source="{Binding source}"/>
 
 </Window>
