--- a/GUI/Navigation/FindPage.xaml
+++ b/GUI/Navigation/FindPage.xaml
@@ -25,7 +25,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <TextBox x:Name="EnterRebelTextBox" Text="" Width="300"  TextAlignment="Left" Margin="10,10,10,10"  Grid.Row="0" Grid.Column="0"/>
+            <TextBox  x:Name="EnterRebelTextBox" Text="" Width="300"  TextAlignment="Left" Margin="10,10,10,10"  Grid.Row="0" Grid.Column="0"/>
             <TextBlock IsHitTestVisible="False" Text="Enter Rebel ID"  TextAlignment="Left" Height="30" Grid.Row="0" Grid.Column="0" Padding="5, 5, 5, 5"  Foreground="LightGray" Margin="10,10,10,10">
                 <TextBlock.Style>
                     <Style TargetType="{x:Type TextBlock}">
@@ -43,10 +43,10 @@
                 </TextBlock.Style>
             </TextBlock>
 
-            <Button Content="Search" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" Background="LightGray"/>
+            <Button CommandParameter="{Binding Text, ElementName=EnterRebelTextBox}"  Content="Search" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" Background="LightGray"/>
 
-            <TextBlock Margin=" 10,10,10,10" Grid.Row="1" Grid.Column="1" Background="GhostWhite"/>
-            <TextBlock Margin=" 10,10,10,10" Grid.Row="1" Grid.Column="0" Background="GhostWhite"/>
+            <TextBlock Text="{Binding rebelDetailsToDisplay}"  Margin=" 10,10,10,10" Grid.Row="1" Grid.Column="1" Background="GhostWhite"/>
+            <TextBlock Text="{Binding salesOrderDetailsToDisplay}" Margin=" 10,10,10,10" Grid.Row="1" Grid.Column="0" Background="GhostWhite"/>
         </Grid>
     </Grid>
 </Page>
