--- a/GUI/Navigation/DeletePage.xaml
+++ b/GUI/Navigation/DeletePage.xaml
@@ -3,10 +3,15 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:viewModel="clr-namespace:GUI.Navigation"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
 	Title="DeletePage">
 
+    <Page.DataContext>
+        <viewModel:DeletePageViewModel/>
+    </Page.DataContext>
+    
     <Grid Background="#802A2A">
 
         <Grid.RowDefinitions>
@@ -27,10 +32,11 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <TextBox Name="RebelId" Margin="10,10" />
-            <Button Command="{Binding DeleteButton}" CommandParameter="{Binding Text, ElementName=RebelId}" Content="Annihilate" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" />
+            <Button Name="DeleteButton" Command="{Binding DeleteButton}" CommandParameter="{Binding Text, ElementName=RebelId, Mode=TwoWay}"  Content="Annihilate" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" />
             <TextBox Name="RebelId2" Margin="10,10" Grid.Row="1" Grid.Column="0" />
-            <Button Command="{Binding DeleteButton}" CommandParameter="{Binding Text, ElementName=RebelId2}" Content="Finish Off" Margin="10,10,10,10" Grid.Row="1" Grid.Column="1" />
+            <Button Command="{Binding DeleteButton}" CommandParameter="{Binding Text, ElementName=RebelId2, Mode=TwoWay}" Content="Finish Off" Margin="10,10,10,10" Grid.Row="1" Grid.Column="1" />
 
+            
         </Grid>
     </Grid>
 </Page>
