--- a/GUI/Navigation/DeletePage.xaml
+++ b/GUI/Navigation/DeletePage.xaml
@@ -32,9 +32,9 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <TextBox Name="RebelId" Margin="10,10" />
-            <Button Name="DeleteButton" Command="{Binding DeleteButton}" CommandParameter="{Binding Text, ElementName=RebelId, Mode=TwoWay}"  Content="Annihilate" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" />
+            <Button Name="DeleteButton" Command="{Binding DeleteButton}" CommandParameter="{Binding Text, ElementName=RebelId, Mode=TwoWay}"  Content="Rest in Peace" Margin="10,10,10,10" Grid.Row="0" Grid.Column="1" />
             <TextBox Name="RebelId2" Margin="10,10" Grid.Row="1" Grid.Column="0" />
-            <Button Command="{Binding DeleteButton}" CommandParameter="{Binding Text, ElementName=RebelId2, Mode=TwoWay}" Content="Finish Off" Margin="10,10,10,10" Grid.Row="1" Grid.Column="1" />
+            <Button Command="{Binding DeleteButton2}" CommandParameter="{Binding Text, ElementName=RebelId2, Mode=TwoWay}" Content="Die, treacherous scum!" Margin="10,10,10,10" Grid.Row="1" Grid.Column="1" />
 
             
         </Grid>
